--- a/main.css
+++ b/main.css
@@ -205,6 +205,9 @@ header .navbar #toggle-button:checked + .line .bottom {
   top: 214px;
   left: 76px;
 }
+.slide-container .swiper-slide .silde__image_m {
+  display: none;
+}
 
 /* OVERVIEW */
 .overview-area {
@@ -469,28 +472,50 @@ header .navbar #toggle-button:checked + .line .bottom {
     position: relative;
   }
   .swiper .swiper-wrapper .swiper-slide .text-box h2 {
-    font-size: 30px;
-    top: 20px;
+    font-size: 32px;
+    top: 18px;
     left: 15px;
   }
   .swiper .swiper-wrapper .swiper-slide .text-box p {
-    font-size: 16px;
-    top: 65px;
+    font-size: 21px;
+    top: 70px;
     left: 15px;
   }
   .slide-container .swiper-slide .btn {
     position: absolute;
-    top: 100px;
-    left: 30px;
+    top: 160px;
+    left: 18px;
+  }
+  .slide-container .swiper-slide .silde__image {
+    display: none;
+  }
+  .slide-container .swiper-slide .silde__image_m {
+    display: block;
+    width: 100%;
   }
   .overview-area {
     flex-direction: column;
   }
+  .overview-area .overview-item .derc {
+    font-size: 22px;
+    margin-right: 0;
+    margin-bottom: 24px;
+    line-height: 1.6;
+  }
   .stories-area {
     flex-direction: column;
   }
+  .article-area {
+    flex-direction: column;
+  }
+  .article-area .article-item {
+    height: auto;
+  }
   .archive-area {
     flex-direction: column;
+  }
+  .archive-area .archive-item .derc {
+    margin-right: 0;
   }
   .archive-area .btn-group .btn {
     flex-direction: column;
