--- a/main.css
+++ b/main.css
@@ -174,23 +174,23 @@ header .navbar #toggle-button:checked + .line .bottom {
   width: 100%;
   height: auto;
 }
+.swiper .swiper-wrapper .swiper-slide .text-box {
+  position: absolute;
+  top: 70px;
+  left: 76px;
+  color: #000;
+}
 .swiper .swiper-wrapper .swiper-slide .text-box h2 {
   font-weight: 400;
   font-size: 52px;
-  color: #000;
-  position: absolute;
-  top: 75px;
-  left: 76px;
 }
 .swiper .swiper-wrapper .swiper-slide .text-box p {
-  display: block;
   font-size: 24px;
-  color: #000;
-  position: absolute;
-  top: 150px;
-  left: 76px;
   font-weight: 400;
   line-height: 1.6;
+}
+.swiper .swiper-wrapper .swiper-slide .text-box .btn {
+  margin-top: 20px;
 }
 .swiper .swiper-pagination {
   position: absolute;
@@ -199,11 +199,6 @@ header .navbar #toggle-button:checked + .line .bottom {
 .swiper .swiper-pagination-bullet {
   background-color: #000;
   margin: 0 10px !important;
-}
-.slide-container .swiper-slide .btn {
-  position: absolute;
-  top: 214px;
-  left: 76px;
 }
 .slide-container .swiper-slide .silde__image_m {
   display: none;
@@ -454,7 +449,7 @@ header .navbar #toggle-button:checked + .line .bottom {
     border-bottom: 1px solid #000;
   }
   .common-contents h1 {
-    font-size: 48px;
+    font-size: 45px;
   }
   header {
     height: 88px;
@@ -478,20 +473,15 @@ header .navbar #toggle-button:checked + .line .bottom {
     margin-top: 88px;
     position: relative;
   }
+  .swiper .swiper-wrapper .swiper-slide .text-box {
+    top: 20px;
+    left: 14px;
+  }
   .swiper .swiper-wrapper .swiper-slide .text-box h2 {
     font-size: 32px;
-    top: 18px;
-    left: 15px;
   }
   .swiper .swiper-wrapper .swiper-slide .text-box p {
     font-size: 21px;
-    top: 70px;
-    left: 15px;
-  }
-  .slide-container .swiper-slide .btn {
-    position: absolute;
-    top: 160px;
-    left: 18px;
   }
   .slide-container .swiper-slide .silde__image {
     display: none;
@@ -504,7 +494,7 @@ header .navbar #toggle-button:checked + .line .bottom {
     flex-direction: column;
   }
   .overview-area .overview-item .derc {
-    font-size: 22px;
+    font-size: 20px;
     margin-right: 0;
     margin-bottom: 24px;
     line-height: 1.6;
@@ -534,6 +524,7 @@ header .navbar #toggle-button:checked + .line .bottom {
     flex-direction: column;
   }
   .archive-area .archive-item .derc {
+    font-size: 20px;
     margin-right: 0;
   }
   .archive-area .btn-group .btn {
@@ -566,14 +557,14 @@ header .navbar #toggle-button:checked + .line .bottom {
   .footer .footer-area .footer-left .footer-logo img {
     width: 88px;
     position: absolute;
-    top: 730px;
+    top: 700px;
   }
   .footer .footer-area .footer-left .navi-item li a {
     font-size: 16px;
     color: #fff;
   }
   .footer .footer-area .footer-right {
-    top: 250px;
+    top: 220px;
     width: 100%;
   }
   .footer .footer-area .footer-right .container {
